style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body{
    touch-action: none;
    -webkit-user-select: none;
    user-select: none;
    -webkit-touch-callout: none;
    -webkit-tap-highlight-color: transparent;
}

#gameCanvas{
    background-color: rgb(200, 200, 200);

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

@font-face {
    font-family: 'Xirod';
    src: url('./assets/Xirod.otf') format('opentype');
}

